RESOLVED FIXED62843
WebKit Mac API calls didReceiveAuthenticationChallenge instead of didCancelAuthenticationChallenge
https://bugs.webkit.org/show_bug.cgi?id=62843
Summary WebKit Mac API calls didReceiveAuthenticationChallenge instead of didCancelAu...
Andrew Wellington
Reported 2011-06-16 22:51:12 PDT
WebKit Mac incorrectly calls webView:resource:didReceiveAuthenticationChallenge:fromDataSource: on WebResourceLoadDelegate instead of webView:resource:didCancelAuthenticationChallenge:fromDataSource: This appears to have been broken for a long long time, since r17396.
Attachments
Proposed fix (1.67 KB, patch)
2011-06-16 22:53 PDT, Andrew Wellington
no flags
Fix tabs in ChangeLog (1.69 KB, patch)
2011-06-16 23:01 PDT, Andrew Wellington
no flags
Andrew Wellington
Comment 1 2011-06-16 22:53:47 PDT
Created attachment 97543 [details] Proposed fix
WebKit Review Bot
Comment 2 2011-06-16 22:55:30 PDT
Attachment 97543 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/mac/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/mac/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] Source/WebKit/mac/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Source/WebKit/mac/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andrew Wellington
Comment 3 2011-06-16 23:01:01 PDT
Created attachment 97544 [details] Fix tabs in ChangeLog
WebKit Review Bot
Comment 4 2011-06-18 14:04:55 PDT
Comment on attachment 97544 [details] Fix tabs in ChangeLog Clearing flags on attachment: 97544 Committed r89207: <http://trac.webkit.org/changeset/89207>
WebKit Review Bot
Comment 5 2011-06-18 14:04:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.