2011-06-18  Andrew Wellington  <andrew@webkit.org>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=62843
        WebKit Mac API calls didReceiveAuthenticationChallenge instead of
        didCancelAuthenticationChallenge

        * WebView/WebView.mm:
        (-[WebView _cacheResourceLoadDelegateImplementations]):

Canonical link: https://commits.webkit.org/78536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89207 268f45cc-cd09-0410-ab3c-d52691b4dbfc